# cumpyl-framework

./: .aider.chat.history.md  .aider.input.history  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CUMPYL_API_REFERENCE.md  CUMPYL_DEVELOPER_GUIDE.md  CUMPYL_RELEASE_NOTES.md  CUMPYL_USER_GUIDE.md  DOCS_PACKER_PLUGIN.md  FIXES_SUMMARY.md  GIPPITYIDEAS.md  QWEN.md  README.md  analysis.html  cumpyl.yaml  demo_encoding.py  demo_packer.py  demo_transmutation.py  funkyfresh.md  hrc  mkdocs.yml  modernization_notes.md  plugin_packer_menu.py  pyproject.toml  real_packer.py  requirements.in  setup.py  test_config.py  test_hex_layout.py  test_hex_viewer_copy.py  test_layout_simple.py  test_packer.py
.aider.tags.cache.v4/: cache.db-shm  cache.db-wal
cumpyl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cumpyl_package/: __init__.py  batch_processor.py  build_binary_menu.py  config.py  cumpyl.py  hex_viewer.py  lucky_strikes_menu.py  menu_system.py  menu_system.py.bak  payload_transmutation_menu.py  plugin_manager.py  plugin_packer_menu.py  reporting.py  silly_string_menu.py  start_menu.py  transmuter.py
docs/: CUMPYL_API_REFERENCE.md  CUMPYL_DEVELOPER_GUIDE.md  CUMPYL_RELEASE_NOTES.md  CUMPYL_USER_GUIDE.md  ELF_IMPLEMENTATION_FILE_SUMMARY.md  ELF_SUPPORT_SUMMARY.md  FINAL_ELF_IMPLEMENTATION_SUMMARY.md  FIXES_SUMMARY.md  QWEN.md  README.md  README.md.bak  api.md  cli.md  contributing.md  getting-started.md  index.md  iterative.md  plugins.md
plugins/: LICENSE  README_PACKER.md  __init__.py  analysis.py  analysis_utils.py  base_plugin.py  cgo_packer_plugin.py  config_manager.py  consolidated_utils.py  crypto_utils.py  doc_utils.py  entropy_analysis.py  exceptions.py  format_strategies.py  format_utils.py  go_packer_plugin.py  logging_config.py  packer_plugin.py  (+7 more)
(+38 files in other folders)
